post-launch tweaks

--- a/demos/index.html
+++ b/demos/index.html
@@ -19,7 +19,7 @@
       <p>A sample of software I've created.</p>
       <h3>Block game</h3>
       <p>A game where you move blocks to make combos of three, based on color.</p>
-      <p><a href="game">Try it</a></p>
+      <p><a href="game">Play it</a></p>
       <h3>Last.fm album art fetcher</h3>
       <p>A script that uses the <a href="https://www.last.fm/api">Last.fm developer API</a> to insert album art into a website without requiring the user to write any Javascript.</p>
       <p><a href="album-art-fetcher">More info</a></p>
