--- a/about/index.html
+++ b/about/index.html
@@ -15,10 +15,19 @@
       <nav><a href="/">Home</a><a href="/about">About</a><a href="/demos">Demos</a></nav>
     </header>
     <main>
-      <h2>About the site</h2>
-      <p>A digital extension of my resume!</p>
       <h2>About Alex</h2>
-      <p>I'm a developer!!</p>
+      <ul>
+        <li>I’m a software developer living in St. Paul, MN.</li>
+        <li>I have proven success in full-stack web development, with a special interest in frontend.</li>
+        <li>I have a strong attention to detail, but at heart, I am a big-picture thinker, who thrives on understanding my team’s context and goals.</li>
+        <li>I’m enthusiastic about my interests, which include web development, music, and a game called <a href="https://thrombusleague.org/">thrombus</a>.</li>
+      </ul>
+      <h3>About this site</h3>
+      <p>
+        This site serves as an extension of my resume, which you can see summarized on the <a href="/">homepage</a>.
+        With this site, I aim to paint a fuller picture of my interests and skills as a developer.
+        My plan is to continue to add more software <a href="/demos">demos</a>, and eventually to keep a technical blog here as well.
+      </p>
     </main>
     <footer>
     </footer>
