first blog post

--- a/about/index.html
+++ b/about/index.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <h1>Alex Seefeldt</h1>
-      <nav><a href="/">Home</a><a href="/about">About</a><a href="/demos">Demos</a></nav>
+      <nav><a href="/">Home</a><a href="/about">About</a><a href="/demos">Demos</a><a href="/blog">Blog</a></nav>
     </header>
     <main>
       <h2>About Alex</h2>
@@ -26,7 +26,7 @@
       <p>
         This site serves as an extension of my resume, which you can see summarized on the <a href="/">homepage</a>.
         With this site, I aim to paint a fuller picture of my interests and skills as a developer.
-        My plan is to continue to add more software <a href="/demos">demos</a>, and eventually to keep a technical blog here as well.
+        My plan is to continue to add more software <a href="/demos">Demos</a><a href="/blog">Blog</a>, and eventually to keep a technical blog here as well.
       </p>
     </main>
     <footer>
