--- a/demos/album-art-fetcher/index.html
+++ b/demos/album-art-fetcher/index.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <h1>Alex Seefeldt</h1>
-    <nav><a href="/">Home</a><a href="/about">About</a><a href="/demos">Demos</a></nav>
+    <nav><a href="/">Home</a><a href="/about">About</a><a href="/demos">Demos</a><a href="/blog">Blog</a></nav>
   </header>
   <main>
     <h2>Last.fm album art fetcher</h2>
