--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body class="wide">
     <header>
       <h1>Alex Seefeldt</h1>
-      <nav><a href="/">Home</a><a href="/about">About</a><a href="/demos">Demos</a></nav>
+      <nav><a href="/">Home</a><a href="/about">About</a><a href="/demos">Demos</a><a href="/blog">Blog</a></nav>
     </header>
     <main>
       <p>Active learner, design-oriented thinker, excellent communicator. Experience in web technologies, with a focus on user experience.</p>
